# Rust-practices

async-vs-threads/: Cargo.toml
async-vs-threads/src/: main.rs
clousures/src/: main.rs
collectionss/: Cargo.toml
enums/src/: main.rs
errors/src/: main.rs
flujo-control/: Cargo.toml
flujo-control/src/: main.rs
funtions/src/: main.rs
generics/src/: main.rs
hello_cargo/src/: main.rs
iterators/src/: main.rs
minigrep/src/: hola.txt  lib.rs  main.rs
ownership-and-borrowing/src/: main  main.cpp  main.rs
servidor/: 404.html  index.html
servidor/src/: main.rs
smart-pointers/src/: main.rs
struts/src/: main.rs
threads-2/: Cargo.toml
threads-2/src/: main.rs
threads/src/: main.rs
traits/src/: main.rs
twitter-clone/: .env  Cargo.toml
twitter-clone/migrations/2023-06-30-051520_create_tweets/: up.sql
twitter-clone/migrations/2023-06-30-051857_create_likes/: up.sql
twitter-clone/src/: likes.rs  main.rs  tweets.rs
vector/src/: main.rs
web-assembly/: Cargo.toml
web-assembly/src/: lib.rs
web-assembly/webapp/: index.html
write-test/src/: main.rs
youtube_search/: Cargo.toml
youtube_search/src/: env.rs  main.rs  youtube.rs
