[package]
name = "twitter-clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
dotenv = "0.15"
uuid = {version = "1.4.0", features = ["v4", "serde"]}
chrono = { version = "0.4", features=["serde"]}
serde = {version= "1.0.106"}
serde_derive = { version = "1.0.106" }
serde_json = {version = "1.0.51"}