[package]
name = "youtube_search"
version = "0.1.0"
edition = "2021"


[dependencies]
yew = {version = "0.20.0", features = ["csr"]}
web-sys = {version= "0.3", features=["Event", "InputEvent"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = "0.3"
serde = {version= "1.0", features=["derive"]}